finish lemmatization / preprocessing

--- a/main.ipynb
+++ b/main.ipynb
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -277,16 +277,7 @@
     "id": "wjKYGxzYi8A9",
     "outputId": "185d3c02-7723-4c5d-a58a-69a2eff4462f"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Imports\n",
     "%load_ext autoreload\n",
@@ -309,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -342,9 +333,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2021-10-18 22:55:07 FancyLogger  INFO     \u001b[1m\u001b[37mLogger is set. Log file path: /home/drkostas/GDrive/Projects/UTK/NLP-Project2/Code/logs/proj_2.log\u001b[0m\n",
-      "2021-10-18 22:55:07 Config       INFO     \u001b[1m\u001b[37mConfiguration file loaded successfully from path: /home/drkostas/GDrive/Projects/UTK/NLP-Project2/Code/confs/proj_2.yml\u001b[0m\n",
-      "2021-10-18 22:55:07 Config       INFO     \u001b[1m\u001b[37mConfiguration Tag: proj2\u001b[0m\n"
+      "2021-10-25 21:44:58 Config       INFO     \u001b[1m\u001b[37mConfiguration file loaded successfully from path: /Users/6j9/classes/ece_692/project2/rinehartAnalysis_wordVectors/confs/proj_2.yml\u001b[0m\n",
+      "2021-10-25 21:44:58 Config       INFO     \u001b[1m\u001b[37mConfiguration Tag: proj2\u001b[0m\n"
      ]
     }
    ],
@@ -369,18 +359,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2021-10-18 23:07:54 FancyLogger  INFO     \u001b[1m\u001b[37mLogger is set. Log file path: /home/drkostas/GDrive/Projects/UTK/NLP-Project2/Code/logs/proj_2.log\u001b[0m\n",
-      "2021-10-18 23:07:54 Notebook     INFO     \u001b[1m\u001b[36mLogger Examples:\u001b[0m\n",
-      "\n",
-      "2021-10-18 23:07:54 Notebook     WARNING  \u001b[4m\u001b[36mLogger Warning underlined\u001b[0m\n",
-      "2021-10-18 23:07:54 Notebook     ERROR    \u001b[1m\u001b[41m\u001b[33mLogger Error in red&yellow\u001b[0m\n"
+     "ename": "NameError",
+     "evalue": "name 'ColorizedLogger' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/99/3cbl32yn2t586z6wv4jpjd9s54djfc/T/ipykernel_91244/3088382063.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mlog_path\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"logs/proj_2.log\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;31m# Load and setup logger\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mlogger\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mColorizedLogger\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlogger_name\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'Notebook'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcolor\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'cyan'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0mColorizedLogger\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msetup_logger\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlog_path\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mlog_path\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdebug\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mclear_log\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m# Examples\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'ColorizedLogger' is not defined"
      ]
     }
    ],
@@ -423,29 +413,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Import preprocessing lib\n",
-    "import nlp_libs.books.preprocessing as pre"
+    "from nlp_libs.books import *"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# The Circular Staircase"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# pre.my_function()"
+    "book = ProcessedBook('staircase', books['The_Circular_Staircase'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "lemmas = book.lemmas"
+   ]
   },
   {
    "cell_type": "markdown",
