check all 5 books and update jupyter notebook

--- a/main.ipynb
+++ b/main.ipynb
@@ -333,8 +333,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2021-10-25 21:44:58 Config       INFO     \u001b[1m\u001b[37mConfiguration file loaded successfully from path: /Users/6j9/classes/ece_692/project2/rinehartAnalysis_wordVectors/confs/proj_2.yml\u001b[0m\n",
-      "2021-10-25 21:44:58 Config       INFO     \u001b[1m\u001b[37mConfiguration Tag: proj2\u001b[0m\n"
+      "2021-10-25 22:42:41 Config       INFO     \u001b[1m\u001b[37mConfiguration file loaded successfully from path: /Users/6j9/classes/ece_692/project2/rinehartAnalysis_wordVectors/confs/proj_2.yml\u001b[0m\n",
+      "2021-10-25 22:42:41 Config       INFO     \u001b[1m\u001b[37mConfiguration Tag: proj2\u001b[0m\n"
      ]
     }
    ],
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -430,20 +430,180 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "book = ProcessedBook('staircase', books['The_Circular_Staircase'])"
+    "book = ProcessedBook(books['The_Circular_Staircase'])\n",
+    "lemmas = book.lemmas"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'this be the story of how a middle aged spinster lose her mind desert her domestic god in the city take a furnished house for the summer out of town and find herself involve in one of those mysterious crime that keep our newspaper and detective agency happy and prosperous for twenty year I have be perfectly comfortable for twenty year I have have the window box fill in the spring the carpet lift the awning put up and the furniture cover with brown linen for as many summer I have say good by to my friend and after watch'"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "' '.join(lemmas[:100])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# The Man in the Lower Ten"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
+    "book = ProcessedBook(books['The_Man_in_Lower_Ten'])\n",
     "lemmas = book.lemmas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'mcknight be gradually take over the criminal end of the business I never like it and since the strange case of the man in low ten I have be a bit squeamish give a case like that where you can build up a network of clue that absolutely incriminate three entirely different people only one of whom can be guilty and your faith in circumstantial evidence die of overcrowding I never see a shivering white face wretch in the prisoner dock that I do not hark back with shudder horror to the strange event on the pullman car ontario between'"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "' '.join(lemmas[:100])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# The After House"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "book = ProcessedBook(books['The_After_House'])\n",
+    "lemmas = book.lemmas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'by the bequest of an eld brother I be leave enough money to see I through a small college in ohio and to secure I four year in a medical school in the east why I choose medicine I hardly know possibly the career of a surgeon attract the adventurous element in I perhaps come of a family of doctor I merely follow the line of least resistance it may be indirectly but inevitably that I might be on the yacht ella on that terrible night of august 12 more than a year ago I get through somehow I play'"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "' '.join(lemmas[:100])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# The Window at the Wide Cat"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "book = ProcessedBook(books['The_Window_at_the_White_Cat'])\n",
+    "lemmas = book.lemmas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'in my criminal work anything that wear skirt be a lady until the law prove she otherwise from the frayed and slovenly petticoat of the woman who own a poultry stand in the market and who have grow wealthy by sell chicken at twelve ounce to the pound or the silk sweep of mamie tracy whose diamond have be steal down on the avenue or the staidly respectable black and middle aged skirt of the client whose husband have find an affinity partial to lace and frippery and have run off with she -- all the wearer be lady and'"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "' '.join(lemmas[:100])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# The Bat"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "book = ProcessedBook(books['The_Bat'])\n",
+    "lemmas = book.lemmas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"you 've get to get he boy -- get he or bust say a tired police chief pound a heavy fist on a table the detective he bellow the word at look at the floor they have do their good and fail failure mean resignation for the police chief return to the hate work of pound the pavement for they -- they know it and know it could summon no gesture of bravado to answer their chief 's gunman thug hi jacker loft robber murderer they could get they all in time -- but they could not get the man\""
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "' '.join(lemmas[:100])"
    ]
   },
   {
@@ -455,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
