now have dataframes on which to groupby

--- a/main.ipynb
+++ b/main.ipynb
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -116,7 +116,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "66af54f43f2a42d3a261f3d0f434ebcc",
+       "model_id": "3227580c750d4ba9a2561970366af96b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -186,7 +186,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c55ebd5855ca490791c5d6b9308b6d4e",
+       "model_id": "0aeca2417e5d4f708c381b2ade4b830e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -277,7 +277,16 @@
     "id": "wjKYGxzYi8A9",
     "outputId": "185d3c02-7723-4c5d-a58a-69a2eff4462f"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "# Imports\n",
     "%load_ext autoreload\n",
@@ -288,7 +297,10 @@
     "import re\n",
     "from pprint import pprint\n",
     "# Numpy\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "\n",
+    "# Import preprocessing lib\n",
+    "from nlp_libs.books import *"
    ]
   },
   {
@@ -300,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -333,8 +345,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2021-10-25 22:42:41 Config       INFO     \u001b[1m\u001b[37mConfiguration file loaded successfully from path: /Users/6j9/classes/ece_692/project2/rinehartAnalysis_wordVectors/confs/proj_2.yml\u001b[0m\n",
-      "2021-10-25 22:42:41 Config       INFO     \u001b[1m\u001b[37mConfiguration Tag: proj2\u001b[0m\n"
+      "2021-10-27 21:45:16 Config       INFO     \u001b[1m\u001b[37mConfiguration file loaded successfully from path: /Users/96v/Documents/DSE/nlp/rinehartAnalysis_wordVectors/confs/proj_2.yml\u001b[0m\n",
+      "2021-10-27 21:45:16 Config       INFO     \u001b[1m\u001b[37mConfiguration Tag: proj2\u001b[0m\n"
      ]
     }
    ],
@@ -359,18 +371,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'ColorizedLogger' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/99/3cbl32yn2t586z6wv4jpjd9s54djfc/T/ipykernel_91244/3088382063.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mlog_path\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"logs/proj_2.log\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;31m# Load and setup logger\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mlogger\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mColorizedLogger\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlogger_name\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'Notebook'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcolor\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'cyan'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0mColorizedLogger\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msetup_logger\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlog_path\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mlog_path\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdebug\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mclear_log\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m# Examples\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'ColorizedLogger' is not defined"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2021-10-27 21:45:17 FancyLogger  INFO     \u001b[1m\u001b[37mLogger is set. Log file path: /Users/96v/Documents/DSE/nlp/rinehartAnalysis_wordVectors/logs/proj_2.log\u001b[0m\n",
+      "2021-10-27 21:45:17 Notebook     INFO     \u001b[1m\u001b[36mLogger Examples:\u001b[0m\n",
+      "\n",
+      "2021-10-27 21:45:17 Notebook     WARNING  \u001b[4m\u001b[36mLogger Warning underlined\u001b[0m\n",
+      "2021-10-27 21:45:17 Notebook     ERROR    \u001b[1m\u001b[41m\u001b[33mLogger Error in red&yellow\u001b[0m\n"
      ]
     }
    ],
@@ -405,20 +417,19 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from nlp_libs import books"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Preprocessing"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Import preprocessing lib\n",
-    "from nlp_libs.books import *"
    ]
   },
   {
@@ -430,32 +441,218 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "book = ProcessedBook(books['The_Circular_Staircase'])\n",
-    "lemmas = book.lemmas"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'this be the story of how a middle aged spinster lose her mind desert her domestic god in the city take a furnished house for the summer out of town and find herself involve in one of those mysterious crime that keep our newspaper and detective agency happy and prosperous for twenty year I have be perfectly comfortable for twenty year I have have the window box fill in the spring the carpet lift the awning put up and the furniture cover with brown linen for as many summer I have say good by to my friend and after watch'"
+       "{'url': 'https://www.gutenberg.org/files/434/434-0.txt',\n",
+       " 'protagonists': [{'Mr. Jamieson': ['jamieson', 'detective', 'winters']}],\n",
+       " 'antagonists': [{'Anne Watson': ['anne watson', 'watson']}],\n",
+       " 'crime': {'crime_weapon': ['revolver'], 'crime_objects': ['tmp']}}"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "' '.join(lemmas[:100])"
+    "books['The_Circular_Staircase']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "book = ProcessedBook(books['The_Circular_Staircase'])\n",
+    "sentences = book.lemmatize_by_sentence()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = books.word_embeddings.calculate_differing_distances(output, [['jamieson', 'watson'], \n",
+    "                                                            ['revolver', 'watson'], \n",
+    "                                                            ['murder', 'watson'], \n",
+    "                                                            ['jamieson', 'murder'], \n",
+    "                                                            ['jamieson', 'revolver'],\n",
+    "                                                            ['watson', 'revolver'],\n",
+    "                                                            ['murder', 'revolver'],\n",
+    "                                                            ['murder', 'bag'],\n",
+    "                                                            ['murder', 'rachel'],                                                                  \n",
+    "                                                            ['jamieson', 'detective']])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>word1</th>\n",
+       "      <th>word2</th>\n",
+       "      <th>vectorSize</th>\n",
+       "      <th>windowSize</th>\n",
+       "      <th>cosineSim</th>\n",
+       "      <th>dotSim</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>97</th>\n",
+       "      <td>murder</td>\n",
+       "      <td>bag</td>\n",
+       "      <td>200</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0.995936</td>\n",
+       "      <td>0.625594</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>107</th>\n",
+       "      <td>murder</td>\n",
+       "      <td>bag</td>\n",
+       "      <td>200</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.996555</td>\n",
+       "      <td>0.718513</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>murder</td>\n",
+       "      <td>bag</td>\n",
+       "      <td>50</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.987875</td>\n",
+       "      <td>0.775404</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>147</th>\n",
+       "      <td>murder</td>\n",
+       "      <td>bag</td>\n",
+       "      <td>300</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.998056</td>\n",
+       "      <td>0.812726</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>67</th>\n",
+       "      <td>murder</td>\n",
+       "      <td>bag</td>\n",
+       "      <td>100</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.995341</td>\n",
+       "      <td>0.831142</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>139</th>\n",
+       "      <td>jamieson</td>\n",
+       "      <td>detective</td>\n",
+       "      <td>300</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0.999730</td>\n",
+       "      <td>6.556924</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39</th>\n",
+       "      <td>jamieson</td>\n",
+       "      <td>detective</td>\n",
+       "      <td>50</td>\n",
+       "      <td>10</td>\n",
+       "      <td>0.998634</td>\n",
+       "      <td>7.786859</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>159</th>\n",
+       "      <td>jamieson</td>\n",
+       "      <td>detective</td>\n",
+       "      <td>300</td>\n",
+       "      <td>10</td>\n",
+       "      <td>0.999756</td>\n",
+       "      <td>7.862607</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>79</th>\n",
+       "      <td>jamieson</td>\n",
+       "      <td>detective</td>\n",
+       "      <td>100</td>\n",
+       "      <td>10</td>\n",
+       "      <td>0.999016</td>\n",
+       "      <td>8.192954</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>119</th>\n",
+       "      <td>jamieson</td>\n",
+       "      <td>detective</td>\n",
+       "      <td>200</td>\n",
+       "      <td>10</td>\n",
+       "      <td>0.999713</td>\n",
+       "      <td>8.332603</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>160 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        word1      word2 vectorSize windowSize  cosineSim    dotSim\n",
+       "97     murder        bag        200          5   0.995936  0.625594\n",
+       "107    murder        bag        200          3   0.996555  0.718513\n",
+       "27     murder        bag         50          3   0.987875  0.775404\n",
+       "147    murder        bag        300          3   0.998056  0.812726\n",
+       "67     murder        bag        100          3   0.995341  0.831142\n",
+       "..        ...        ...        ...        ...        ...       ...\n",
+       "139  jamieson  detective        300          5   0.999730  6.556924\n",
+       "39   jamieson  detective         50         10   0.998634  7.786859\n",
+       "159  jamieson  detective        300         10   0.999756  7.862607\n",
+       "79   jamieson  detective        100         10   0.999016  8.192954\n",
+       "119  jamieson  detective        200         10   0.999713  8.332603\n",
+       "\n",
+       "[160 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.sort_values(['cosineSim', 'dotSim'])"
    ]
   },
   {
@@ -467,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -477,22 +674,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'mcknight be gradually take over the criminal end of the business I never like it and since the strange case of the man in low ten I have be a bit squeamish give a case like that where you can build up a network of clue that absolutely incriminate three entirely different people only one of whom can be guilty and your faith in circumstantial evidence die of overcrowding I never see a shivering white face wretch in the prisoner dock that I do not hark back with shudder horror to the strange event on the pullman car ontario between'"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "' '.join(lemmas[:100])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "book.clean_lines"
    ]
   },
   {
@@ -504,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -514,20 +709,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'by the bequest of an eld brother I be leave enough money to see I through a small college in ohio and to secure I four year in a medical school in the east why I choose medicine I hardly know possibly the career of a surgeon attract the adventurous element in I perhaps come of a family of doctor I merely follow the line of least resistance it may be indirectly but inevitably that I might be on the yacht ella on that terrible night of august 12 more than a year ago I get through somehow I play'"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "' '.join(lemmas[:100])"
    ]
@@ -541,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -551,20 +735,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'in my criminal work anything that wear skirt be a lady until the law prove she otherwise from the frayed and slovenly petticoat of the woman who own a poultry stand in the market and who have grow wealthy by sell chicken at twelve ounce to the pound or the silk sweep of mamie tracy whose diamond have be steal down on the avenue or the staidly respectable black and middle aged skirt of the client whose husband have find an affinity partial to lace and frippery and have run off with she -- all the wearer be lady and'"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "' '.join(lemmas[:100])"
    ]
@@ -578,7 +751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -588,20 +761,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"you 've get to get he boy -- get he or bust say a tired police chief pound a heavy fist on a table the detective he bellow the word at look at the floor they have do their good and fail failure mean resignation for the police chief return to the hate work of pound the pavement for they -- they know it and know it could summon no gesture of bravado to answer their chief 's gunman thug hi jacker loft robber murderer they could get they all in time -- but they could not get the man\""
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "' '.join(lemmas[:100])"
    ]
@@ -615,7 +777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -790,7 +952,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.12"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
