--- a/main.ipynb
+++ b/main.ipynb
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 35,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -345,8 +345,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2021-10-27 21:45:16 Config       INFO     \u001b[1m\u001b[37mConfiguration file loaded successfully from path: /Users/96v/Documents/DSE/nlp/rinehartAnalysis_wordVectors/confs/proj_2.yml\u001b[0m\n",
-      "2021-10-27 21:45:16 Config       INFO     \u001b[1m\u001b[37mConfiguration Tag: proj2\u001b[0m\n"
+      "2021-10-31 17:52:18 Config       INFO     \u001b[1m\u001b[37mConfiguration file loaded successfully from path: /home/jeanmerlet/projects/nlp/rinehartAnalysis_wordVectors/confs/proj_2.yml\u001b[0m\n",
+      "2021-10-31 17:52:18 Config       INFO     \u001b[1m\u001b[37mConfiguration Tag: proj2\u001b[0m\n"
      ]
     }
    ],
@@ -371,18 +371,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2021-10-27 21:45:17 FancyLogger  INFO     \u001b[1m\u001b[37mLogger is set. Log file path: /Users/96v/Documents/DSE/nlp/rinehartAnalysis_wordVectors/logs/proj_2.log\u001b[0m\n",
-      "2021-10-27 21:45:17 Notebook     INFO     \u001b[1m\u001b[36mLogger Examples:\u001b[0m\n",
+      "2021-10-31 17:51:16 FancyLogger  INFO     \u001b[1m\u001b[37mLogger is set. Log file path: /home/jeanmerlet/projects/nlp/rinehartAnalysis_wordVectors/logs/proj_2.log\u001b[0m\n",
+      "2021-10-31 17:51:16 Notebook     INFO     \u001b[1m\u001b[36mLogger Examples:\u001b[0m\n",
       "\n",
-      "2021-10-27 21:45:17 Notebook     WARNING  \u001b[4m\u001b[36mLogger Warning underlined\u001b[0m\n",
-      "2021-10-27 21:45:17 Notebook     ERROR    \u001b[1m\u001b[41m\u001b[33mLogger Error in red&yellow\u001b[0m\n"
+      "2021-10-31 17:51:16 Notebook     WARNING  \u001b[4m\u001b[36mLogger Warning underlined\u001b[0m\n",
+      "2021-10-31 17:51:16 Notebook     ERROR    \u001b[1m\u001b[41m\u001b[33mLogger Error in red&yellow\u001b[0m\n"
      ]
     }
    ],
@@ -417,15 +417,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 55,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from nlp_libs import books"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -441,42 +432,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "book_meta = books['The_Circular_Staircase']\n",
+    "book = ProcessedBook(book_meta)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "protagonist_subs = list(book_meta['protagonists'][0].values())[0]\n",
+    "substitution = (protagonist_subs, 'protagonist')\n",
+    "sentences = book.lemmatize_by_sentence(word_subs=substitution)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'url': 'https://www.gutenberg.org/files/434/434-0.txt',\n",
-       " 'protagonists': [{'Mr. Jamieson': ['jamieson', 'detective', 'winters']}],\n",
-       " 'antagonists': [{'Anne Watson': ['anne watson', 'watson']}],\n",
-       " 'crime': {'crime_weapon': ['revolver'], 'crime_objects': ['tmp']}}"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "AttributeError",
+     "evalue": "'dict' object has no attribute 'word_embeddings'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_19445/995455893.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m df = books.word_embeddings.calculate_differing_distances(output, [['jamieson', 'watson'], \n\u001b[0m\u001b[1;32m      2\u001b[0m                                                             \u001b[0;34m[\u001b[0m\u001b[0;34m'revolver'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'watson'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m                                                             \u001b[0;34m[\u001b[0m\u001b[0;34m'murder'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'watson'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m                                                             \u001b[0;34m[\u001b[0m\u001b[0;34m'jamieson'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'murder'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m                                                             \u001b[0;34m[\u001b[0m\u001b[0;34m'jamieson'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'revolver'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'dict' object has no attribute 'word_embeddings'"
+     ]
     }
    ],
-   "source": [
-    "books['The_Circular_Staircase']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "book = ProcessedBook(books['The_Circular_Staircase'])\n",
-    "sentences = book.lemmatize_by_sentence()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 70,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "df = books.word_embeddings.calculate_differing_distances(output, [['jamieson', 'watson'], \n",
     "                                                            ['revolver', 'watson'], \n",
@@ -952,7 +943,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.9.7"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
